GROOVY-9272: remove temporary variable from switch expression rewrite